# UFOLAF

./: .gitignore  README.md  pyproject.toml
notebook/: icescopy_freeze_count_to_air_inp_demo.ipynb
olaf/: main.py
olaf/processing/: graph_data_csv.py  spaced_temp_csv.py
scripts/: csu_inp_processing.py
src/: ufolaf.py  ufolaf_adapters.py  ufolaf_blank_math.py  ufolaf_math.py  ufolaf_models.py  ufolaf_qc.py  ufolaf_transforms.py
